--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;500;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;500;900&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
 
